Added fadeIn on scroll to elements of timeline

--- a/timeline.html
+++ b/timeline.html
@@ -26,39 +26,39 @@
     <img id="goBackImage" class="goBackImageNotHovered" src="../Images/arrow.png" alt=""/><span class="returnTextNotHover"
                                                                                              id="goBackText">Return</span></a>
 <div class="timeline">
-    <div class="container left">
+    <div class="container left fade">
         <div class="content">
             <h2>2012</h2>
             <p>High School education</p>
             <p>IES Carmen y Severo Ochoa, Luarca</p>
         </div>
     </div>
-    <div class="container right">
+    <div class="container right fade">
         <div class="content">
             <h2>2015</h2>
             <p>Start of the baccalaureate in Science and Technology</p>
         </div>
     </div>
-    <div class="container left">
+    <div class="container left fade">
         <div class="content">
             <h2>2017</h2>
             <p>Start of the software engineering degree</p>
         </div>
     </div>
-    <div class="container right">
+    <div class="container right fade">
         <div class="content">
             <h2>2019-2020</h2>
             <p>Erasmus stay in Wroclaw, Poland</p>
             <p>Student in the Politechnika Wroclawska</p>
         </div>
     </div>
-    <div class="container left">
+    <div class="container left fade">
         <div class="content">
             <h2>2021</h2>
             <p>University graduation</p>
         </div>
     </div>
-    <div class="container right">
+    <div class="container right fade">
         <div class="content">
             <h2>2021-...</h2>
             <p>...</p>
@@ -67,5 +67,6 @@
 </div>
 <script src="Scripts/jquery.js"></script>
 <script type="text/javascript" src="Scripts/bioScript.js"></script>
+<script type="text/javascript" src="Scripts/timelineScript.js"></script>
 </body>
 </html>
