Fixed return arrow in timeline and changed styles and positioning

--- a/timeline.html
+++ b/timeline.html
@@ -20,6 +20,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="../Styles/stylesTimeline.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="../Styles/styles.css" media="screen" charset="utf-8">
 </head>
 <body>
 <a class="hoverForReturn " id="goBackLink" href="index.html">
@@ -60,8 +61,8 @@
     </div>
     <div class="container right fade">
         <div class="content">
-            <h2>2021-...</h2>
-            <p>...</p>
+            <h2>2021 - ...</h2>
+            <p>TBC</p>
         </div>
     </div>
 </div>
