Added responsive css to the bio page and minor style fixes

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     <p id="mainTitle">Raúl Núñez García</p>
     <p id="secondTitle"></p>
     <ul>
-      <a href="bio.html"><li id="link3" class="linkWithNormalBorder">Bio</li></a>
-      <a href="contact.html"><li id="link3" class="linkWithNormalBorder">Contact</li></a>
+      <a href="bio.html"><li  class="linkWithNormalBorder">Bio</li></a>
+      <a href="timeline.html"><li class="linkWithNormalBorder">Timeline</li></a>
+      <a href="contact.html"><li class="linkWithNormalBorder">Contact</li></a>
     </ul>
     <script src="Scripts/jquery.js"></script>
     <script type="text/javascript" src="Scripts/indexScript.js"></script>
