--- a/timeline.html
+++ b/timeline.html
@@ -37,7 +37,7 @@
     <div class="container right fade">
         <div class="content">
             <h2>2015</h2>
-            <p>Start of the baccalaureate in Science and Technology</p>
+            <p>Baccalaureate in Science and Technology</p>
         </div>
     </div>
     <div class="container left fade">
@@ -49,8 +49,8 @@
     <div class="container right fade">
         <div class="content">
             <h2>2019-2020</h2>
-            <p>Erasmus stay in Wroclaw, Poland</p>
-            <p>Student in the Politechnika Wroclawska</p>
+            <p>Erasmus stay in Wrocław, Poland</p>
+            <p>Student in the Politechnika Wrocławska</p>
         </div>
     </div>
     <div class="container left fade">
