--- a/timeline.html
+++ b/timeline.html
@@ -19,12 +19,12 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="../Styles/stylesTimeline.css" media="screen" charset="utf-8">
-    <link rel="stylesheet" href="../Styles/styles.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="Styles/stylesTimeline.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="Styles/styles.css" media="screen" charset="utf-8">
 </head>
 <body>
 <a class="hoverForReturn " id="goBackLink" href="index.html">
-    <img id="goBackImage" class="goBackImageNotHovered" src="../Images/arrow.png" alt=""/><span class="returnTextNotHover"
+    <img id="goBackImage" class="goBackImageNotHovered" src="Images/arrow.png" alt=""/><span class="returnTextNotHover"
                                                                                              id="goBackText">Return</span></a>
 <div class="timeline">
     <div class="container left fade">
