Added final responsive styles, fixed transparency on contacts and added footers

--- a/contact.html
+++ b/contact.html
@@ -35,4 +35,7 @@
     <script src="Scripts/jquery.js"></script>
     <script type="text/javascript" src="Scripts/contactScript.js"></script>
   </body>
+  <footer>
+    <p>Luarca, 2021</p>
+  </footer>
 </html>
