--- a/index.html
+++ b/index.html
@@ -33,4 +33,8 @@
     <script src="Scripts/jquery.js"></script>
     <script type="text/javascript" src="Scripts/indexScript.js"></script>
   </body>
+
+  <footer>
+    <p>Luarca, 2021</p>
+  </footer>
 </html>
