--- a/timeline.html
+++ b/timeline.html
@@ -61,7 +61,7 @@
     </div>
     <div class="container right fade">
         <div class="content">
-            <h2>2021 - ...</h2>
+            <h2>2021...</h2>
             <p>TBC</p>
         </div>
     </div>
@@ -70,4 +70,7 @@
 <script type="text/javascript" src="Scripts/bioScript.js"></script>
 <script type="text/javascript" src="Scripts/timelineScript.js"></script>
 </body>
+<footer>
+    <p>Luarca, 2021</p>
+</footer>
 </html>
